# hong2_UI

./: drawn.html  drawn.js  finish.html  finish.js  game.html  game.js  game_intro.html  game_intro.js  index.html  index.js  intro.html  intro.js  package-lock.json  package.json  select_pic.html  select_pic.js  taking_pic.html  upload.html  upload.js
css/: drawn_style.css  drawn_style.css.map  finish_style.css  finish_style.css.map  game_intro_style.css  game_intro_style.css.map  game_style.css  game_style.css.map  index_style.css  index_style.css.map  intro_style.css  intro_style.css.map  select_pic_style.css  select_pic_style.css.map  upload_style.css  upload_style.css.map
delivery_service_robot/: package.xml
scss/: drawn_style.scss  finish_style.scss  game_intro_style.scss  game_style.scss  index_style.scss  intro_style.scss  select_pic_style.scss  upload_style.scss
