<?xml version="1.0"?>
<package format="2">
  <name>delivery_topics</name>
  <version>0.0.0</version>
  <description>The delivery_topics package</description>
  <maintainer email="roomedia@naver.com">EngHyu</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
